# FacePGA

./: .gitignore  README.md
demo/learning/: main.py
inference/src/: readme.md
learning/: CMakeLists.txt  config.mk
learning/src/: main.cpp  shallow.cpp  shallow.hpp
learning/src/neural/__deps/: readme.md
learning/src/neural/func/: loss.hpp
learning/src/neural/model/: model.cpp  model.hpp
learning/src/neural/net/: layers.cpp  layers.hpp  tensor.hpp
learning/src/test/: tester.cpp
learning/src/utils/: logger.cpp  logger.hpp
src/learning/: main.cpp
src/learning/neural/: tester.cpp
src/learning/neural/net/: module.hpp
